# hypersdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-hypecli.yml
abi/: ERC20.json  IERC4626.json  IERC777.json  MorphoEventsLib.json  MorphoIOracle.json
docs/plans/: 2026-01-30-agent-payments-design.md
examples/: README.md  morpho_borrow_apy.rs  morpho_create_market_events.rs  morpho_supply_apy.rs  morpho_vault_apy.rs
examples/hypercore/: buy_and_transfer.rs  funding_history.rs  list-hip3.rs  list-markets.rs  list-tokens.rs  multisig_order.rs  multisig_send_asset.rs  multisig_send_usd.rs  send_order.rs  send_usd.rs  subaccounts.rs  transfer_from_evm.rs  transfer_to_evm.rs  transfer_to_perps.rs  transfer_to_spot.rs  twap_order.rs  user_role.rs  user_vault_equities.rs  vault_details.rs  vault_transfer.rs  websocket-candles.rs  websocket-user-events.rs
examples/morpho/: borrow_apy.rs  create_market_events.rs  events.rs  supply_apy.rs  vault_apy.rs
examples/uniswap/: pools_created.rs  prjx_flows.rs
hypecli/: Cargo.toml  README.md  install.sh
hypecli/src/: account.rs  balances.rs  main.rs  markets.rs  morpho.rs  multisig.rs  orders.rs  send.rs  subscribe.rs  utils.rs  vault.rs
skills/hyperliquid-payments/: SKILL.md
skills/hyperliquid-trading/: SKILL.md
src/: lib.rs
src/hypercore/: error.rs  http.rs  mod.rs  signing.rs  types.rs  utils.rs  ws.rs
src/hypercore/types/: api.rs  mod.rs
src/hyperevm/: mod.rs
src/hyperevm/morpho/: contracts.rs  mod.rs
src/hyperevm/uniswap/: mod.rs
